update test.yml and add some comments